# grafika_flat_earth

./: CMakeLists.txt  README.md  coordinates.hpp  flat_earth.blend  flat_earth_done.blend  flat_earth_texture.paint  main.cpp  materials.cpp  materials.h  objloader.cpp  objloader.hpp  pch.h  shader_3.frag  shader_3.vert  test.cpp
